OD-10828 fix page list overflow, open active page
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@49362 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/editor/src/scss/layout/sidebar.scss
+++ b/editor/src/scss/layout/sidebar.scss
@@ -62,6 +62,11 @@
     }
   }
   
+  &__list {
+    overflow-y: auto;
+    height: calc(100vh - 250px);
+  }
+  
   &__footer {
     position: absolute;
     font-size: 12px;
